Wrap up some formatting issues to match design

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -70,3 +70,26 @@
 .name-info {
   flex-grow: 2;
 }
+
+.status {
+  display: flex;
+  align-items: center;
+}
+
+.status-dot:before {
+  content:"\00b7";
+  font-size: 80px; 
+  line-height: 0.8;
+}
+
+.red {
+  color: red;
+}
+
+.blue {
+  color: blue;
+}
+
+.green {
+  color: green;
+}
